--- a/DcmNetTools/DcmNetToolsRecord.ini
+++ b/DcmNetTools/DcmNetToolsRecord.ini
@@ -2,3 +2,19 @@
 AETitle=ECHOSTORESCP
 IP=127.0.0.1
 Port=104
+StoreDir=G:\\DICOM\\1
+FileList\1\StoreFile=G:\\DICOM\\611_1\\26.dcm
+FileList\2\StoreFile=G:\\DICOM\\611_1\\27.dcm
+FileList\3\StoreFile=G:\\DICOM\\611_1\\28.dcm
+FileList\4\StoreFile=G:\\DICOM\\611_1\\29.dcm
+FileList\5\StoreFile=G:\\DICOM\\611_1\\30.dcm
+FileList\size=7
+FileList\6\StoreFile=G:\\DICOM\\611_1\\31.dcm
+FileList\7\StoreFile=G:\\DICOM\\611_1\\32.dcm
+LogLevel=debug
+
+[EchoStoreSCP]
+AETitle=ECHOSTORESCP
+Port=104
+LogLevel=info
+OutputDir=/data/
